tdf#114396 sw: overly strict assertions in SwFrameFormat::Modify()

It's only a problem if the style contains an anchor position;
the anchor type by itself is fine, and the wrong assertion is
particularly stupid considering that
DocumentStylePoolManager::GetFormatFromPool() inits various
built-in styles with anchor types.

(regression from eed046433a847d3005e52c38963fb883322a39e6)

Change-Id: If8ac000b7f888686725d6bf0ef8e5fb38198c889